# video2text

./: .gitignore  README.md  dosya.txt  requirements.txt
processor/: pyproject.toml
processor/video_processor/: __init__.py  cli.py  engine.py
processor/video_processor/io/: __init__.py  extractor.py  simple_db.py  writer.py
processor/video_processor/ocr/: __init__.py  base.py  paddle.py  test_ocr.py
